fixed products on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ h2{
         width: 15ch;
     }
     #Decor{
-    
+        right: 2rem;
     }
     #baby-items{
         right: 2rem;
